# mpgs

./: .dockerignore  .gitignore  AI游戏推荐算法评估与V2重构方案.docx  CONTEXT.md  Cargo.toml  Dockerfile  Dockerfile.mpgs-server  README.md  admin.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  container-images.yml  release.yml
apps/dbtool/: Cargo.toml
apps/dbtool/src/: main.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: main.rs
apps/server/: Cargo.toml  build.rs
apps/server/src/: ai_limits.rs  api.rs  cors.rs  main.rs  rate_limit.rs  scheduler.rs
crates/ai/: Cargo.toml
crates/ai/src/: compare.rs  error.rs  gateway.rs  group_advice.rs  intent.rs  lib.rs  model_registry.rs  openai_compat.rs  provider.rs  route.rs  router.rs  summary.rs  types.rs  validate.rs  vector.rs  web_discovery.rs
crates/domain/: Cargo.toml
crates/mpgs-core/: Cargo.toml
crates/mpgs-server/: Cargo.toml
crates/mpgs-server/migrations/: 0001_public_catalog_ops.sql  0002_ops_audit_events.sql  0003_admin_review_notes.sql  0005_public_catalog_game_details.sql
crates/mpgs-server/src/: admin.rs  config.rs  config_files.rs  cors.rs  db.rs  health.rs  lib.rs  main.rs  public_catalog.rs  rate_limit.rs  restart.rs  sample_seed.rs  setup.rs  steam.rs  worker.rs
crates/mpgs-server/tests/: admin_static_tests.rs  admin_tests.rs  config_management_tests.rs  config_tests.rs  cors_tests.rs  first_run_tests.rs  health_tests.rs  migration_contract_tests.rs  postgres_smoke_tests.rs  public_catalog_tests.rs  restart_tests.rs  sample_seed_tests.rs  service_info_tests.rs
crates/recommender/: Cargo.toml
crates/steam-source/: Cargo.toml
crates/steam-source/fixtures/: app_list_incremental.json  app_list_invalid_empty_more.json  app_list_page1.json  app_list_page2.json  ccu_missing.json  ccu_ok.json  golden_set_v0.json  reviews_fail.json  reviews_popular.json  reviews_summary.json  store_appdetails_coming_soon.json  store_appdetails_demo.json  store_appdetails_fail.json  store_appdetails_game.json
crates/steam-source/src/: app_list.rs  ccu.rs  cursor.rs  error.rs  golden.rs  hash.rs  lib.rs  proposal.rs  rate_limit.rs  raw.rs  reviews.rs  store.rs  store_search.rs
crates/storage/: Cargo.toml
crates/storage/src/: accounts.rs  ai_m8.rs  backup.rs  catalog.rs  clock.rs  community.rs  curation.rs  db.rs  error.rs  feedback.rs  ingest.rs  jobs.rs  lib.rs  migrate.rs  models.rs  offline_features.rs  play_intent.rs  quality.rs  query.rs  repo.rs  retrieval.rs  seed.rs  source_state.rs  tests.rs  users.rs  util.rs
deploy/: .env.example  Caddyfile  compose.caddy.yml  compose.yml  docker-compose.yml  mpgs-host.nginx.conf  mpgs-server.env.example  mpgs-update.service  mpgs-update.timer  mpgs-web.nginx.conf  mpgs-worker-loop.sh  mpgs.env.example  update.sh
deploy/config/: setup.toml.example
deploy/scripts/: build-mpgs-server-image.ps1  deploy-mpgs-server-remote.ps1  test-mpgs-production-readiness.ps1  test-mpgs-public-catalog-live.ps1  test-mpgs-release-readiness.ps1  test-mpgs-server-remote-preflight.ps1
docs/: 2026-05-01-ai-evaluation-standard.md  2026-06-07-public-discovery-service-migration-roadmap.md  2026-06-08-public-service-architecture-decisions.md  2026-06-09-client-service-connection-implementation-summary.md  2026-06-09-client-service-connection-ux-next-slice.md  AI.md  API.md  ARCHITECTURE.md  DATA_STORAGE.md  DEVELOPMENT.md  FRONTEND_REFACTOR_NOTES.md  FRONTEND_REFACTOR_PROMPTS.md  M1_FEASIBILITY.md  M4_ACCEPTANCE.md  M4_ACCEPTANCE_RUN.md  M4_CI_RUN.md  M4_DESKTOP_E2E_RUN.md  M5_ACCEPTANCE.md  M5_ACCEPTANCE_RUN.md  M6_ACCEPTANCE.md  M6_ACCEPTANCE_RUN.md  M7_ACCEPTANCE.md  M7_ACCEPTANCE_RUN.md  MVP_PLAN.md  OPERATIONS.md  PRD.md  PRD_0.2.md  PRIVACY.md  RECOMMENDATION.md  SIGNING_AND_UPDATES.md  SOURCES.md  STEAM_MEDIA_GALLERY_BUILD_SPEC.md  UI_REDESIGN_PROMPTS.md  local-wsl-docker-validation.md  release-signing.md
docs/adr/: 0001-postgres-for-public-discovery-service.md  0002-rust-axum-for-public-discovery-service.md  0003-rest-api-v1-for-service-contract.md  0004-single-admin-token-session-auth.md  0005-service-self-restart-for-managed-restarts.md  0006-setup-token-for-first-run-configuration.md  0007-paginated-public-library-api.md  0008-postgres-backed-job-queue.md  0009-require-https-for-production-service.md  0010-rust-openapi-typescript-contract-generation.md  0011-redesign-postgres-schema-for-service-boundaries.md  0012-tauri-csp-allows-https-service-connections.md  (+3 more)
e2e-tests/: .gitignore  README.md  package.json  wdio.conf.mjs
migrations/: 0001_initial.sql  0002_data_quality_findings.sql  0003_users_feedback_algorithm.sql  0004_m3_integrity_fixes.sql  0005_m3_recommendation_inputs.sql  0006_play_intent_votes.sql  0008_m7_accounts_community_ai.sql  0009_m7_avatar_moderation.sql  0010_popular_reviews.sql  0011_local_ai_credentials.sql  0012_enrichment_refresh_state.sql  0013_store_detail_success_state.sql  0014_device_local_ai_mode.sql  0016_steam_media_gallery.sql
scripts/: backfill_missing_covers.py  backup_db.ps1  build_m7_preview_real.py  fetch_coming_soon_30d.py  generate-openapi-types.mjs  m4_acceptance.ps1  m5_acceptance.ps1  m6_acceptance.ps1  package_server.ps1  record_ccu_404_terminals.py  restore_db.ps1  run_enrichment_batches.ps1
src/: App.css  App.test.tsx  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_batch_refresh_task.rs  ai_recommendation.rs  auto_scheduler.rs  classic_discovery_task.rs  commands.rs  db.rs  discovery.rs  discovery_task.rs  game_analysis.rs  lib.rs  llm.rs  models.rs  recommendation.rs  state.rs  steam.rs
src-tauri/src/scoring/: accessibility.rs  aggregate.rs  content_depth.rs  mod.rs  multiplayer_fit.rs  risk.rs  signals.rs
src-tauri/tests/: game_analysis_tests.rs  game_metadata_tests.rs  recommendation_tests.rs  user_state_tests.rs
src/admin/: main.tsx  (+5 more)
web/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
(+165 files in other folders)
