[workspace]
members = [
    "apps/server",
    "apps/dbtool",
    "crates/ai",
    "crates/domain",
    "crates/recommender",
    "crates/steam-source",
    "crates/storage",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"

[workspace.dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
axum = "0.8"
getrandom = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5.5", features = ["axum_extras"] }
