[package]
name = "mpgs"
version = "0.1.0"
description = "Steam multiplayer game recommendation desktop app"
authors = ["Aiyo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
reqwest = { version = "0.13.2", features = ["json", "query", "rustls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["macros", "time"] }
