[package]
name = "mpgs-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
axum = { workspace = true, features = ["macros"] }
mpgs-domain = { path = "../../crates/domain" }
mpgs-recommender = { path = "../../crates/recommender" }
mpgs-storage = { path = "../../crates/storage" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
