[package]
name = "mpgs-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "AI provider abstraction, validation, embedding helpers, and fallback gateway"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
