[package]
name = "mpgs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mpgs-core = { path = "../mpgs-core" }
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx-core = { version = "0.8", features = ["migrate"] }
sqlx-postgres = { version = "0.8", features = ["migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1"
utoipa = { version = "5", features = ["axum_extras"] }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
