[package]
name = "mpgs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mpgs-core = { path = "../mpgs-core" }
anyhow = "1"
axum = "0.8"
base64 = "0.22"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json", "query", "rustls"] }
sha2 = "0.10"
sqlx-core = { version = "0.8", features = ["migrate"] }
sqlx-postgres = { version = "0.8", features = ["migrate"] }
subtle = "2"
thiserror = "2"
time = { version = "0.3.47", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
toml = "1"
utoipa = { version = "5", features = ["axum_extras"] }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
