[package]
name = "mpgs-steam-source"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
mpgs-domain = { path = "../domain" }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
