[package]
name = "mpgs-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
mpgs-domain = { path = "../domain" }
mpgs-steam-source = { path = "../steam-source" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
