[package]
name = "mpgs-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
getrandom = { workspace = true }
mpgs-domain = { path = "../domain" }
mpgs-steam-source = { path = "../steam-source" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
