[package]
name = "mpgs-desktop"
version = "0.1.0"
description = "MPGS desktop client shell (Tauri 2)"
edition = "2021"
publish = false

# Standalone workspace: the Tauri shell needs platform webview toolchains that
# the root Rust workspace CI must not depend on.
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
